--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Force github pages to build -->
 <html lang="en">
   <head>
     <link rel="icon" href="https://drive.google.com/uc?id=19fOSMlKIW2ul2ELzByyACo6UmHkYN8Mz">
