Github pages changed branch

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" href="https://drive.google.com/uc?id=19fOSMlKIW2ul2ELzByyACo6UmHkYN8Mz">
-    <title>Kengineering.</title>
+    <title>Kengineering</title>
   </head>
   <body>
     <div id="root"></div>
